<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_name"
        android:text="@string/app_name"
        android:textColor="@color/cardview_light_background"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="22sp"/>

    <AutoCompleteTextView
        android:id="@+id/search_auto_complete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/btnSearchBar"
        android:ems="12"
        android:hint="@string/search_hint"
        android:textColorHint="@color/cardview_light_background"
        android:imeOptions="actionSearch"
        android:inputType="textAutoComplete|textAutoCorrect"
        android:textColor="#FFFFFF"
        android:focusable="true"
        android:focusableInTouchMode="true">
  <!--  android:theme="@style/AutoCompleteTheme" -->

    </AutoCompleteTextView>

    <ImageButton
        android:id="@+id/btnSearchBar"
        android:layout_width="28sp"
        android:layout_height="28sp"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:layout_centerVertical="true"
        android:contentDescription="@string/ImgDesc"
        android:scaleType="fitCenter"/>
       <!-- app:srcCompat="@drawable/search_icon"/> -->

</RelativeLayout>