<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v4.view.ViewPager
                android:id="@+id/plant_info_viewPager"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:foreground="@drawable/plant_info_image_overlay">

            </android.support.v4.view.ViewPager>

            <ImageButton
                android:id="@+id/btnMap"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/ImgDesc"
                android:scaleType="center"
                android:background="@android:color/holo_green_light"
                android:layout_gravity="end"
                android:layout_marginTop="215dp"
                android:layout_marginRight="15dp"/>
            <!--     android:src="@mipmap/load_map_icon" -->

            <ImageButton
                android:id="@+id/btnWiki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ImgDesc"

                android:scaleType="center"
                android:background="@android:color/transparent"
                android:layout_gravity="end"
                android:layout_marginTop="215dp"
                android:layout_marginRight="80dp"/>
            <!-- android:src="@mipmap/wiki_icon"-->

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/plant_latin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="23dp"
                    android:textStyle="bold|italic"
                    android:gravity="center"
                    android:text="neki text"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="23dp"
                    android:text="neki text"
                    android:id="@+id/etxtPlantName"
                    android:textStyle="bold|italic"
                    android:gravity="center" />
                   <!-- android:theme="@style/EditTextTheme"/> -->

            </FrameLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plant_info_edit"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/ImgDesc"
                android:background="@android:color/holo_blue_dark"
                android:layout_marginTop="10dp"/>
            <!--
                android:src="@drawable/pencil_edit_icon"-->

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGray"
                android:text="@string/add_by"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etxtAddedBy"
                android:text="Da vidimo"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="end"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorTextGray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tags"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_suggestion"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorTextGray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/suggestions"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

    </LinearLayout>
</ScrollView>
